Added local offer page. Updated TCs.

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -23,6 +23,7 @@ import Button from './Button.astro';
         <li><CtaLink href="/pricing" category="FOOTER_NAV" label="PRICING" class="hover:text-white transition">Pricing</CtaLink></li>
         <li><CtaLink href="/our-difference" category="FOOTER_NAV" label="OUR_DIFFERENCE" class="hover:text-white transition">Our Difference</CtaLink></li>
         <li><CtaLink href="/who-we-serve" category="FOOTER_NAV" label="WHO_WE_SERVE" class="hover:text-white transition">Who We Serve</CtaLink></li>
+        <li><CtaLink href="/local-offer" category="FOOTER_NAV" label="LOCAL_OFFER" class="hover:text-white transition">Local Offer</CtaLink></li>
         <li><CtaLink href="/contact" category="FOOTER_NAV" label="CONTACT" class="hover:text-white transition">Contact</CtaLink></li>
     
    </ul>
